/books/ entry point tests passing
