# spec/swagger.yaml
@@ -11,8 +11,7 @@ info:
 
     ALE divides itself into "books", each of which store *journal entries* and their child *transactions*.
     The cardinal rule of double-entry accounting is that "everything must balance out to zero", and that rule is applied
-    to every journal entry written to the book. If the transactions for a journal entry do not balance out to zero, the
-    system will return a rejected promise.
+    to every journal entry written to the book.
   version: '1.0.0'
   title: A.L.E.
   license:
@@ -63,7 +62,7 @@ paths:
         200:
           description: Success
           schema:
-            $ref: '#/definitions/Result'
+            $ref: '#/definitions/BookResponse'
           examples:
             application/json:
               success: false
@@ -71,17 +70,17 @@ paths:
         400:
           description: Bad input
           schema:
-            $ref: '#/definitions/Result'
+            $ref: '#/definitions/ErrorResponse'
           examples:
             application/json:
               success: false
               message: Book 'Foobar' does not exist
 
-  '/books/{bookId}/entries':
+  '/books/{bookId}/ledger':
     get:
-      summary: List entries in book
+      summary: Fetch the ledger
       description: |
-        Fetches entries for the given book and their transactions
+        Fetches all transactions for the given book for the dates provided
       operationId: getBookEntries
 
       parameters:
@@ -102,6 +101,18 @@ paths:
         description: 'The end date for entries'
         required: false
         type: string
+
+      - name: perPage
+        in: query
+        description: 'The number of results per page'
+        required: false
+        type: integer
+
+      - name: page
+        in: query
+        description: 'The page number'
+        required: false
+        type: integer
 
       produces:
       - application/json
@@ -132,7 +143,7 @@ paths:
         400:
           description: Invalid input, such as unknown book
           schema:
-            $ref: '#/definitions/Result'
+            $ref: '#/definitions/Response'
 
 
 # An object to hold data types that can be consumed and produced by operations.
@@ -147,18 +158,28 @@ definitions:
   Book:
     type: object
     required:
-      - id
-      - baseCurrency
+      - name
+      - currency
     properties:
       id:
-        description: The id, or name of the book
+        description: The id for the book the book
+        type: integer
+      name:
+        description: The name of the book
         type: string
         example: General Ledger
-      baseCurrency:
+      currency:
         description: |
-          The currency the book is referenced in. All other currencies and calculations are quoted in terms of this currency
+          The currency the book is referenced in.
+          All other currencies and calculations are quoted in terms of this currency
         type: string
         example: USD
+      createdAt:
+        description: The timestamp of when the book was created
+        type: number
+      updatedAt:
+        description: The timestamp of the last time this entry was modified
+        type: number
 
   Entries:
     type: object
@@ -214,7 +235,7 @@ definitions:
         description: The exchange rate to convert to the basis currency
         type: number
 
-  Result:
+  Response:
     type: object
     properties:
       success:
@@ -223,4 +244,14 @@ definitions:
       message:
         type: string
 
+  ErrorResponse:
+    allOf:
+      - $ref: '#/definitions/Response'
+      - properties:
+          errorCode:
+            type: integer
 
+  BookResponse:
+    allOf:
+      - $ref: '#/definitions/Response'
+      - $ref: '#/definitions/Book'
